testament/tests/shouldfail/tmaxcodesize.nim
discard """
maxcodesize: 1
target: c
"""

echo "Hello World"
